build(deps): keep support for error_tracker 0.3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
             erlang: '26.2.5.3'
           - elixir: '1.15'
             erlang: '25.3.2.14'
+            blend: error_tracker_0_3
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
@@ -30,6 +31,8 @@ jobs:
         with:
           otp-version: ${{ matrix.erlang }}
           elixir-version: ${{ matrix.elixir }}
+      - run: cp blend/${{ matrix.blend }}.mix.lock mix.lock
+        if: ${{ matrix.blend }}
       - run: mix deps.get --check-locked
       - run: mix format --check-formatted
         if: ${{ matrix.lint }}
