build(deps): bump error_tracker from 0.4.0 to 0.5.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
             lint: true
           - elixir: '1.16'
             erlang: '26.2.5.3'
+            blend: error_tracker_0_4
           - elixir: '1.15'
             erlang: '25.3.2.14'
             blend: error_tracker_0_3
