--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,5 @@ tower_error_tracker-*.tar
 # Temporary files, for example, from tests.
 /tmp/
 
-/blend/_build
-/blend/deps
+/blend/*/_build
+/blend/*/deps
